mule-user-guide/v/3.2/udp-transport-reference.adoc
=  UDP模块参考

== 介绍

http://en.wikipedia.org/wiki/User_Datagram_Protocol[通用数据报协议]或UDP是快速发送或接收大量消息（数据报）的无状态协议。 Mule中的UDP传输允许使用UDP套接字向Mule发送消息或接收消息。

== 命名空间和语法

XML名称空间：

[source, xml]
----
xmlns:udp="http://www.mulesoft.org/schema/mule/udp"
----

XML模式位置：

[source]
----
http://www.mulesoft.org/schema/mule/udp  http://www.mulesoft.org/schema/mule/udp/3.2/mule-udp.xsd
----

http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[模式结构]

连接器语法：

[source, xml, linenums]
----
<udp:connector name="udpConnector" receiveBufferSize="1024" sendBufferSize="1024"
               timeout="0" keepSendSocketOpen="false" broadcast="false"/>
----

端点语法：+
您可以通过两种方式定义您的端点：

. 前缀端点：
+
[source, xml]
----
<udp:inbound-endpoint host="localhost" port="65433"/>
----

. 没有前缀的URI：
+
[source, xml]
----
<inbound-endpoint address="udp://localhost:65433"/>
----

有关更多信息，请参阅下面的部分。

== 注意事项

UDP是Internet上使用的标准通信协议之一，支持通过互联网和局域网内的通信。 Mule UDP模块使用本地Java套接字支持，不会增加java.net类中的通信开销，同时允许在Mule配置中指定许多UDP编程的高级功能，而不是使用Java编码。

使用低级别UDP数据报进行通信时使用此传输。 UDP旨在最大限度地提高可靠性，订购或数据完整性的速度和规模。 UDP数据报不能保证以任何特定的速度到达，或者根本不会以任何特定的速度到达，它们可能以不同的顺序到达。如果这些保证中的任何一个对您的应用程序很重要，请使用不同的传输方式，例如＃[ TCP]＃。

注意：UDP不提供错误检查，因此如果重要，您可能需要在应用程序中执行额外的验证或错误处理。

如下面的例子所示，可以使用UDP传输

* 将消息发送到UDP套接字
* 从UDP套接字读取消息

== 特点

UDP模块允许Mule应用程序发送和接收UDP数据报，并声明性地定制UDP的以下功能（在适用的情况下，使用每个功能的标准名称）：

* 发送或接收消息的超时时间（SO_TIMEOUT）。
* 是否允许发送广播消息（SO_BROADCAST）。
* 是否在发送消息后关闭套接字。
* 可以接收的最大邮件大小。

可以通过以下两种方式之一使用UDP端点：

* 要接收UDP数据报，请创建一个入站UDP端点。
* 要发送UDP数据报，请创建一个出站UDP端点。

== 用法

使用UDP端点

. 将MULE UDP命名空间添加到您的配置中：
* 使用xmlns定义UDP前缀：udp = "http://www.mulesoft.org/schema/mule/udp"
* 使用http://www.mulesoft.org/schema/mule/udp定义架构位置http://www.mulesoft.org/schema/mule/udp/3.2/mule-udp.xsd
. 为UDP端点定义一个或多个连接器。
* 创建一个UDP连接器：
+
[source, xml]
----
<udp:connector name="udpConnector"/>
----

. 创建UDP端点。
在入站端点收到* 数据报。数据报中的字节变成消息有效载荷。
* 数据报被发送到出站端点。消息有效载荷中的字节成为数据报。
* 这两种端点均由主机名和端口标识。

注意：UDP端点始终是单向的。

== 示例配置

*Copy datagrams from one port to another*

[source, xml, linenums]
----
<udp:connector name="connector"/> ❶

<flow name="copy">
    <udp:inbound-endpoint host="localhost" port="4444" exchange-pattern="one-way"/> ❷
    <udp:outbound-endpoint host="remote" port="5555" exchange-pattern="one-way" /> ❸
</flow>
----

❶处的连接器使用所有默认属性。 in的入站端点接收数据报并将它们复制到out的出站端点。

== 配置选项

UDP连接器属性

[%header%autowidth.spread]
|===
| {名称{1}}说明 |缺省
|广播 |将其设置为true，以允许发送广播端口 |为false
| keepSendSocketOpen  |是否在发送邮件后保持套接字打开 | false
| receiveBufferSize  |这是可以接收的最大（以字节为单位）数据报的大小。 | 16 KB
| sendBufferSize  |网络发送缓冲区的大小 | 16 KB
|超时 |用于发送和接收 |系统默认值的超时
|===

== 配置参考

=== 元素列表

==  UDP传输

UDP传输使事件能够作为数据报包发送和接收。

== 连接器

<connector...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
| receiveBufferSize  |整数 |否 |   |套接字接收缓冲区的大小。
|超时 |长 |否 |   |发送或接收呼叫超时的时间。
| sendBufferSize  |整数 |否 |   |套接字发送缓冲区的大小。
|广播 |布尔值 |否 |   |是否启用套接字发送广播数据。
| keepSendSocketOpen  |布尔值 |否 |   |是否保持发送套接字处于打开状态。
|===

无<connector...>的子元素



== 入站端点

<inbound-endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机
|串
|无
|
|
|端口
|端口号
|无
|
|
|===

无<inbound-endpoint...>的子元素



== 出站端点

<outbound-endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机
|串
|无
|
|
|端口
|端口号
|无
|
|
|===

无<outbound-endpoint...>的子元素


== 端点

<endpoint...>的{​​{0}}属性

[%header%autowidth.spread]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机
|串
|无
|
|
|端口
|端口号
|无
|
|
|===

无<endpoint...>的子元素



== 架构

*  http://www.mulesoft.org/schema/mule/udp/3.2/mule-udp.xsd[UDP模式]
*  http://www.mulesoft.org/docs/site/3.3.0/schemadocs/schemas/mule-udp_xsd/schema-overview.html[模式结构]

==  Javadoc API参考

这个模块的Javadoc可以在这里找到： http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/udp/package-summary.html[UDP]

== 的Maven

UDP模块可以包含以下依赖项：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-udp</artifactId>
  <version>3.2.0</version>
</dependency>
----

== 注意事项

在Mule 3.1.1之前，有两个不同的属性用于在UDP连接器`sendTimeout`和`receiveTimeout`上设置超时。有必要将它们设置为相同的值。
